--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
+sudo: true
 python:
   - "2.7"
   - "3.5"
 install:
   - pip install -r requirements.txt
+  - sudo apt-get install python-xlib
 addons:
   apt:
     packages:
     - libopencv-dev
     - python-opencv
-    - python-xlib
 
 script: nosetests
 
