--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: python
 python:
   - "2.7"
-  - "3.5"
-virtualenv:
-  - system_site_packages: true
 install:
   - pip install -r requirements.txt
-addons:
-  apt:
-    sources:
-    - ubuntu
-    packages:
-    - libopencv-dev
-    - python-opencv
+virtualenv:
+  system_site_packages: true
+addons:		
+  apt:		
+    sources:		
+      - ubuntu		
+    packages:		
+    - libopencv-dev		
+    - python-opencv		
     - python-xlib
-
+    
 script: nosetests
 
